# el-generale

./: LICENSE  README.md  pyproject.toml
el_generale/: noneptr.py  singleton.py  utils.py
el_generale/collects/: processing.py
tests/: test_el_generale.py
