[tool.poetry]
name = "el-generale"
version = "0.1.0"
description = ""
authors = ["Uno Yakshi <uno.yakshi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
singleton = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
